public interface Creature {
    String getDescription();
    boolean overcomeBarrier(BarrierBase barrierBase);
}
