public interface Jumper {
    boolean overcomeBarrier(BarrierWall b);
}
