public interface Runner {
    boolean overcomeBarrier(BarrierRoad b);
}
